[package]
name = "lattice-account"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2-rfc = { version = "0.2.18", optional = true, default-features = false }
hex = { version = "0.4", default-features = false }
impl-serde = { version = "0.3.1", default-features = false }
libsecp256k1 = { version = "0.6", default-features = false, features = [ "hmac" ] }
log = "0.4"
serde = { version = "1.0.101", optional = true, default-features = false, features = [ "derive" ] }
sha3 = { version = "0.9", default-features = false }

# Substrate
parity-scale-codec = { version = "3.0.0", default-features = false, features = [ "derive" ] }
scale-info = { version = "2.0", default-features = false, features = [ "derive" ] }
sp-core = { path = "../core", default-features = false }
sp-io = { path = "../io", default-features = false }
sp-runtime = { path = "../runtime", default-features = false }
sp-runtime-interface = { path = "../runtime-interface", default-features = false }
sp-std = { path = "../std", default-features = false }

[dev-dependencies]
hex = "0.4.3"

[features]
default = [ "std" ]
std = [
	"full_crypto",
	"hex/std",
	"impl-serde/std",
	"libsecp256k1/std",
	"parity-scale-codec/std",
	"serde/std",
	"sha3/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]

full_crypto = [
	"blake2-rfc",
	"sp-runtime-interface/disable_target_static_assertions",
]
