[package]
name = "sp-lattice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.57", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.17", optional = true }
thiserror = { version = "1.0.30", optional = true }
sp-inherents = { version = "4.0.0-dev", default-features = false, path = "../inherents" }
sp-runtime = { version = "6.0.0", default-features = false, path = "../runtime" }
sp-std = { version = "4.0.0", default-features = false, path = "../std" }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

[features]
default = [ "std" ]
std = [
	"async-trait",
	"codec/std",
	#"futures-timer",
	"log",
	#"sp-api/std",
	"sp-inherents/std",
	"sp-runtime/std",
	"sp-std/std",
	"thiserror",
]
